--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,7 +15,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -29,7 +29,7 @@ rounded-corners-exclude = [
   "class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
-round-borders = 1;
+round-borders = 0;
 round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
 ];
@@ -159,7 +159,7 @@ fade-exclude = [
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.6;
+inactive-opacity = 0.5;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -216,6 +216,7 @@ opacity-rule = [
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
   "100:class_g    = 'dwm'",
+  "100:class_g    = 'dmenu'",
   "100:class_g    = 'Thunderbird'"
 ];
 
