--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -6,7 +6,7 @@
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
-fps_limit=30
+# fps_limit=30
 
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
 # vsync=
