--- a/.config/alacritty/clima.yml
+++ b/.config/alacritty/clima.yml
@@ -10,7 +10,11 @@
 # to the user's home directory starting with `~/`.
 #import:
 #  - /path/to/alacritty.yml
-
+shell:
+  program: /bin/zsh
+  args:
+    - -c
+    - tempy sao paulo -u metric | less
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
