--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -110,7 +110,7 @@ inactive-opacity = .5
 # frame-opacity = 0.7;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
-inactive-opacity-override = true
+inactive-opacity-override = false
 # inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
@@ -214,7 +214,7 @@ blur-kern = "3x3box";
 animations = true
 # `auto`, `none`, `fly-in`, `zoom`, `slide-down`, `slide-up`, `slide-left`, `slide-right` `slide-in`, `slide-out`
 animation-for-transient-window = "zoom"
-animation-for-open-window = "fly-in"
+animation-for-open-window = "zoom"
 animation-for-unmap-window = "zoom"
 # animation-stiffness = 350
 animation-dampening = 20
