--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -119,7 +119,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono Nerd Font
+    #family: JetBrainsMono Nerd Font
+    family: IBM Plex Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold
