easy access to tty

--- a/.keyd.conf
+++ b/.keyd.conf
@@ -13,3 +13,11 @@ rightalt = oneshot(meta)
 
 capslock = overload(control, esc)
 insert = S-insert
+
+[main]
+
+[control]
+k = C-A-f1
+j = M-S-e
+
+
