added some submap for workspaces

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -105,6 +105,10 @@ gestures {
     workspace_swipe = off
 }
 
+binds {
+        allow_workspace_cycles = true
+    }
+
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic-mouse-v1 {
@@ -157,18 +161,6 @@ bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, C, layoutmsg,swapwithmaster
 bind = $mainMod, F, layoutmsg,focusmaster
 
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
 bind=$mainMod,W,submap,workspace
 submap=workspace
 binde=,c,workspace,1
@@ -177,26 +169,29 @@ binde=,b,workspace,2
 bind=,b,submap,reset
 binde=,t,workspace,3
 bind=,t,submap,reset
-binde=,f,workspace,4
-bind=,f,submap,reset
-binde=,h,workspace,5
-bind=,h,submap,reset
-binde=,g,workspace,6
+binde=,e,workspace,4
+bind=,e,submap,reset
+binde=,g,workspace,5
 bind=,g,submap,reset
 #bind=,escape,submap,reset 
 submap=reset
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind=$mainMod,M,submap,movetoworkspace
+submap=movetoworkspace
+binde=,c,movetoworkspace, 1
+bind=,c,submap,reset
+binde=,b,movetoworkspace, 2
+bind=,b,submap,reset
+binde=,t,movetoworkspace, 3
+bind=,t,submap,reset
+binde=,e,movetoworkspace, 4
+bind=,e,submap,reset
+binde=,g,movetoworkspace, 5
+bind=,g,submap,reset
+submap=reset
+
+bind=SUPER,TAB,workspace,previous
+#bind=SUPER,TAB, workspace, workspace_back_and_forth
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
