--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,8 +1,9 @@
 {
     "layer": "top",
+    "height": 600,
     "position": "right",
     "modules-left": ["wlr/workspaces"],
-    "modules-right": ["hyprland/submap", "disk", "cpu", "memory", "custom/separator", "tray", "custom/separator", "clock", "custom/power"],
+    "modules-right": ["hyprland/submap", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "custom/separator", "tray", "custom/separator", "clock", "clock#day", "custom/power"],
     "wlr/workspaces": {
         "active-only": false,
         "disable-scroll": true,
@@ -26,12 +27,15 @@
         "tooltip": false
     },
     "tray": {
-        // "icon-size": 21,
+        "icon-size": 21,
         "spacing": 10
     },
     "custom/power": {
         "format": "⏻",
         "on-click": "loginctl poweroff"
+    },
+    "clock#day": {
+      "format": "{:%d}",
     },
     "clock": {
         "format": "{:%H\n%M}",
@@ -40,16 +44,33 @@
     "custom/separator": {
         "format": "──────"
     },
+    "custom/ram-icon": {
+        "format": ""
+      },
     "memory": {
         "format": "{}%"
     },
+    "custom/cpu-icon": {
+      "format": ""
+    },
     "cpu": {
-        "format": "{usage}%",
+      "format": "{usage}%",
         "interval": 1,
+    },
+    "custom/disk-root": {
+      "format": ""
     },
     "disk": {
         "interval": 30,
-        "format": "/{percentage_free}%",
+        "format": "{percentage_free}%",
         "path": "/"
+    },
+    "custom/disk-home": {
+      "format": ""
+    },
+    "disk#home": {
+      "interval": 30,
+      "format": "{percentage_free}%",
+      "path": "/home"
     },
 }
