add a option to switch keyboard layout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,10 +30,10 @@ env = XCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = br
-    kb_variant = nodeadkeys
+    kb_layout = br,br
+    kb_variant = nodeadkeys,
     kb_model =
-    kb_options =
+    kb_options = grp:ctrl_shift_toggle
     kb_rules =
 
     follow_mouse = 0
@@ -159,7 +159,7 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, C, layoutmsg,swapwithmaster
-bind = $mainMod, F, layoutmsg,focusmaster
+bind = $sS, F, layoutmsg,focusmaster
 
 bind=$mainMod,W,submap,workspace
 submap=workspace
@@ -228,6 +228,16 @@ binde=,e,exec,~/.bin/easy_preset.sh LoudnessEqualizer
 bind=,e,submap,reset
 binde=,b,exec,~/.bin/easy_preset.sh HeavyBass
 bind=,b,submap,reset
+submap=reset
+
+bind=$mainMod,F,submap,fullscreen
+submap=fullscreen
+binde=,f,fullscreen,0
+bind=,f,submap,reset
+binde=,b,fullscreen,1
+bind=,b,submap,reset
+binde=,i,fakefullscreen
+bind=,i,submap,reset
 submap=reset
 
 # will switch to a submap called resize
