add some new binds and rules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ input {
     kb_layout = br,br
     kb_variant = nodeadkeys,
     kb_model =
-    kb_options = grp:ctrl_shift_toggle
+    kb_options = grp:ctrl_alt_toggle
     kb_rules =
 
     follow_mouse = 0
@@ -121,15 +121,16 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrule=idleinhibit fullscreen,class:^(Brave-browser)$
+windowrule = opacity 1.0 override,^(steam)$ 
+
 #Window Rules
 windowrule = workspace 1, google-chrome-stable
 windowrule = workspace 2, Brave-browser
 windowrule = workspace 3, Alacritty
 windowrule = workspace 4, qutebrowser
-windowrule = workspace 5, qbittorrent
-windowrule = workspace 6, blueman)
-windowrule = workspace 7, vlc
-windowrule = workspace 8, ranger
+windowrule = workspace 5, heroic, steam
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -138,7 +139,7 @@ $sS = SUPERSHIFT
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, alacritty
 bind = $sS, C, killactive, 
-bind = $mainMod, E, exit, 
+bind = $sS, E, exit, 
 bind = $mainMod, O, togglefloating, 
 bind = $mainMod, D, exec, wofi --show run
 #bind = $mainMod, P, pseudo, # dwindle
@@ -148,6 +149,7 @@ bind=$mainMod,V,submap,volume
 submap=volume
 binde=,K,exec,~/.bin/volume.sh up
 binde=,J,exec,~/.bin/volume.sh down
+binde=,M,exec,~/.bin/volume.sh mute
 bind=,escape,submap,reset 
 submap=reset
 
