deleting hyprpaper.conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,9 @@ exec-once = /home/cie/.config/hypr/hyprstart
 
 # some default env vars.
 env = XCURSOR_SIZE,24
+env = MOZ_ENABLE_WAYLAND,1 
+env = QT_QPA_PLATFORM,"wayland"
+env = SDL_VIDEODRIVER,"wayland"
 
 # keyboard and mouse
 input {
@@ -17,7 +20,7 @@ input {
     kb_options = grp:ctrl_alt_toggle
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     touchpad {
         natural_scroll = no
@@ -27,8 +30,8 @@ input {
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 10
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -78,8 +81,6 @@ device:epic-mouse-v1 {
 
 # window rules
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
-windowrulev2 = idleinhibit fullscreen,class:^(Brave-browser)$
-windowrulev2 = opacity 1.0 override,class:^(steam)$ 
 # workspace rules
 windowrule = workspace 1, Code
 windowrule = workspace 2, Brave-browser
@@ -112,12 +113,12 @@ bindm = $mainMod, mouse:273, resizewindow
 $dropterm  = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
-windowrule = size 75% 40%,$dropterm
+windowrule = size 80% 20%,$dropterm
 
 $edge-gpt  = ^(edge-gpt)$
 windowrule = float,$edge-gpt
 windowrule = workspace special silent,$edge-gpt
-windowrule = size 35% 80%,$edge-gpt
+windowrule = size 30% 90%,$edge-gpt
 
 # one tap keychord
 # fullscreen keychord
@@ -131,6 +132,7 @@ binde=,i,fakefullscreen
 bind=,i,submap,reset
 bind=,escape,submap,reset 
 submap=reset
+
 # scratchpad keychord
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
@@ -144,6 +146,7 @@ binde=,b,exec,~/.bin/easy_preset.sh HeavyBass
 bind=,b,submap,reset
 bind=,escape,submap,reset 
 submap=reset
+
 # workspace keyshort
 bind=$mainMod,W,submap,workspace
 submap=workspace
@@ -153,9 +156,11 @@ binde=,b,workspace,2
 bind=,b,submap,reset
 binde=,t,workspace,3
 bind=,t,submap,reset
-binde=,e,workspace,4
+binde=,m,workspace,4
+bind=,m,submap,reset
+binde=,e,workspace,5
 bind=,e,submap,reset
-binde=,g,workspace,5
+binde=,g,workspace,6
 bind=,g,submap,reset
 bind=,escape,submap,reset 
 submap=reset
@@ -168,9 +173,11 @@ binde=,b,movetoworkspace, 2
 bind=,b,submap,reset
 binde=,t,movetoworkspace, 3
 bind=,t,submap,reset
-binde=,e,movetoworkspace, 4
+binde=,m,movetoworkspace, 4
+bind=,m,submap,reset
+binde=,e,movetoworkspace, 5
 bind=,e,submap,reset
-binde=,g,movetoworkspace, 5
+binde=,g,movetoworkspace, 6
 bind=,g,submap,reset
 bind=,escape,submap,reset 
 submap=reset
@@ -185,6 +192,7 @@ binde=,K,resizeactive,0 -10
 binde=,J,resizeactive,0 10
 bind=,escape,submap,reset 
 submap=reset
+
 # volume keychord
 bind=$mainMod,V,submap,volume
 submap=volume
