--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -94,7 +94,8 @@ bind = $mainMod, T, exec, alacritty
 bind = $sS, C, killactive, 
 bind = $sS, E, exit, 
 bind = $mainMod, O, togglefloating, 
-bind = $mainMod, D, exec, wofi --show run
+bind = $mainMod, D, exec, bemenu.sh
+bind = $mainMod, D, exec, 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
