--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 $mainMod = SUPER
 $sS = SUPERSHIFT
+$terminal = alacritty
+$runner = bemenu.sh
 
 monitor=,preferred,auto,auto
 
@@ -30,17 +32,17 @@ input {
 }
 
 general {
-    gaps_in = 10
-    gaps_out = 10
+    gaps_in = 0
+    gaps_out = 0
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(d3c6aaaa)
+    col.inactive_border = rgba(7a8478aa)
 
     layout = master
 }
 
 decoration {
-    rounding = 10
+    rounding = 0
     blur = yes
     blur_size = 3
     blur_passes = 1
@@ -48,7 +50,7 @@ decoration {
     inactive_opacity = 0.5
 
     drop_shadow = yes
-    shadow_range = 4
+    shadow_range = 10
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
@@ -69,6 +71,7 @@ animations {
 master {
   new_is_master = true
   no_gaps_when_only = true
+  orientation = top
 }
 
 binds {
@@ -81,48 +84,66 @@ device:epic-mouse-v1 {
 
 # window rules
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
 windowrule = workspace 1, Code
 windowrule = workspace 2, Brave-browser
 windowrule = workspace 3, Alacritty
 #windowrule = workspace 4, qutebrowser
-windowrulev2 = workspace 5, class:^(heroic)$
-windowrulev2 = workspace 5, class:^(steam)$
+windowrulev2 = workspace 6, class:^(heroic)$
+windowrulev2 = workspace 6, class:^(steam)$
 
 # binds
-bind = $mainMod, T, exec, alacritty
-bind = $sS, C, killactive, 
-bind = $sS, E, exit, 
-bind = $mainMod, O, togglefloating, 
-bind = $mainMod, D, exec, bemenu.sh
-bind = $mainMod, D, exec, 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
+bind = $mainMod, T, exec, $terminal
+bind = $sS, C, killactive 
+bind = $sS, E, exit 
+bind = $mainMod, O, togglefloating
+bind = $mainMod, D, exec, $runner
+bind = $mainMod, N, exec, grim
+
+## Move focus with mainMod + arrow keys
 bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, C, layoutmsg,swapwithmaster
 bind = $sS, F, layoutmsg,focusmaster
 bind=SUPER,TAB,workspace,previous
-# mouse binds
+bind = $mainMod, U, layoutmsg,orientationtop
+
+## mouse binds
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# scratchpad rules
-$dropterm  = ^(alacritty-dropterm)$
-windowrule = float,$dropterm
-windowrule = workspace special silent,$dropterm
-windowrule = size 80% 20%,$dropterm
-
+## scratchpad rules
 $edge-gpt  = ^(edge-gpt)$
 windowrule = float,$edge-gpt
 windowrule = workspace special silent,$edge-gpt
 windowrule = size 30% 90%,$edge-gpt
+windowrule = move 20 35,$edge-gpt
+
+$dropterm  = ^(alacritty-dropterm)$
+windowrule = float,$dropterm
+windowrule = workspace special silent,$dropterm
+windowrule = size 80% 20%,$dropterm
+windowrule = move 130 50,$dropterm
 
 # one tap keychord
-# fullscreen keychord
+## layout keychord
+bind=$mainMod,L,submap,layout
+submap=layout
+binde=,j,layoutmsg,swapnext
+bind=,j,submap,reset
+binde=,k,layoutmsg,swapprev
+bind=,k,submap,reset
+binde=,f,layoutmsg,focusmaster
+bind=,f,submap,reset
+binde=,s,layoutmsg,swapwithmaster
+bind=,s,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
+## fullscreen keychord
 bind=$mainMod,F,submap,fullscreen
 submap=fullscreen
 binde=,f,fullscreen,0
@@ -134,12 +155,12 @@ bind=,i,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-# scratchpad keychord
+## scratchpad keychord
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
-binde=,g,exec,pypr toggle edge-gpt
+binde=,g,exec,hpr-scratcher toggle edge-gpt
 bind=,g,submap,reset
-binde=,u,exec,pypr toggle term
+binde=,u,exec,hpr-scratcher toggle term
 bind=,u,submap,reset
 binde=,e,exec,~/.bin/easy_preset.sh LoudnessEqualizer
 bind=,e,submap,reset
@@ -148,7 +169,7 @@ bind=,b,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
-# workspace keyshort
+## workspace keyshort
 bind=$mainMod,W,submap,workspace
 submap=workspace
 binde=,c,workspace,1
@@ -184,7 +205,7 @@ bind=,escape,submap,reset
 submap=reset
 
 # loop keychords
-# resize keychord
+## resize keychord
 bind=$sS,R,submap,resize
 submap=resize
 binde=,L,resizeactive,10 0
@@ -194,7 +215,7 @@ binde=,J,resizeactive,0 10
 bind=,escape,submap,reset 
 submap=reset
 
-# volume keychord
+## volume keychord
 bind=$mainMod,V,submap,volume
 submap=volume
 binde=,K,exec,~/.bin/volume.sh up
