--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,136 +1,126 @@
 {
-  "layer": "top",
-    "position": "right",
-    "modules-left": ["wlr/workspaces"],
-    "modules-right": ["hyprland/submap", "custom/updates-icon", "custom/updates", "gamemode", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day","custom/power"],
-    "wlr/workspaces": {
-      "active-only": false,
-      "disable-scroll": true,
-      "all-outputs": true,
-      "format": "{icon}",
-      "format-icons": {
-        "1": "",
-        "2": "",
-        "3": "",
-        "4": "",
-        "5": "",
-        "6": "",
-        "urgent": "",
-        "focused": "",
-        "default": ""
-      },
-      "on-click": "activate"
-    },
-    "custom/updates": {
-      "format": "{}",
-      "interval": 3600,
-      "exec": "~/.bin/updatecheck",
-      "return-type": "json",
-      "exec-if": "exit 0",
-      "signal": 8
-    },
-    "pulseaudio#icon": {
-      "format": "{icon}",
-      "format-bluetooth": "{icon}",
-      "format-muted": "",
-      "format-icons": {
-        "headphone": "",
-        "hands-free": "",
-        "headset": "",
-        "phone": "",
-        "portable": "",
-        "car": "",
-        "default": ["", ""]
-      },
-      "scroll-step": 1,
-      "on-click": "pavucontrol",
-      "ignored-sinks": ["Easy Effects Sink"]
-    },
-    "pulseaudio": {
-      "format": "{volume}%",
-      "format-bluetooth": "{volume}%",
-      "scroll-step": 1,
-      "on-click": "pavucontrol",
-      "ignored-sinks": ["Easy Effects Sink"]
-    },
-    "hyprland/submap": {
-      "format": "",
-      "max-length": 8,
-      "tooltip": false
-    },
-    "gamemode": {
-      "format": "{glyph}",
-      "glyph": "",
-      "format-alt": "",
-      "hide-not-running": false,
-      "use-icon": true,
-      "icon-name": "input-gaming-symbolic",
-      "icon-spacing": 4,
-      "tooltip": false,
-      "icon-size": 20,
-    },
-    "tray": {
-      "icon-size": 21,
-      "spacing": 10
-    },
-    "clock#day": {
-      "format": "{:%d}",
-      "tooltip-format": "<tt><small>{calendar}</small></tt>",
-      "calendar": {
-        "mode"          : "month",
-        "mode-mon-col"  : 1,
-        "weeks-pos"     : "right",
-        "on-scroll"     : 1,
-        "format": {
-          "months":     "<span color='#ffead3'><b>{}</b></span>",
-          "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-          "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-          "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-          "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-        }
-      },
-    },
-    "clock": {
-      "format": "{:%H\n%M}",
-    },
-    "clock#week-day": {
-      "format": "{:%a}",
-    },
-    "custom/separator": {
-      "format": "──────",
-      "tooltip": false,
-    },
-    "custom/ram-icon": {
-      "tooltip": false,
-      "format": ""
-    },
-    "memory": {
-      "format": "{}%"
-    },
-    "custom/cpu-icon": {
-      "tooltip": false,
-      "format": ""
-    },
-    "cpu": {
-      "format": "{usage}%",
-      "interval": 1,
-    },
-    "custom/disk-root": {
-      "tooltip": false,
-      "format": ""
-    },
-    "disk": {
-      "interval": 30,
-      "format": "{percentage_free}%",
-      "path": "/"
-    },
-    "custom/disk-home": {
-      "tooltip": false,
-      "format": ""
-    },
-    "disk#home": {
-      "interval": 30,
-      "format": "{percentage_free}%",
-      "path": "/home"
-    },
+    "layer": "top",
+    "width": 40,
+        "position": "right",
+        "modules-left": ["wlr/workspaces"],
+        "modules-right": ["hyprland/submap", "custom/updates-icon", "custom/updates", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+        "wlr/workspaces": {
+            "active-only": false,
+            "disable-scroll": true,
+            "all-outputs": true,
+            "format": "{icon}",
+            "format-icons": {
+                "1": "",
+                "2": "",
+                "3": "",
+                "4": "",
+                "5": "",
+                "6": "",
+                "urgent": "",
+                "focused": "",
+                "default": ""
+            },
+            "on-click": "activate"
+        },
+        "custom/updates": {
+            "format": "{}",
+            "interval": 3600,
+            "exec": "~/.bin/updatecheck",
+            "return-type": "json",
+            "exec-if": "exit 0",
+            "signal": 8
+        },
+        "pulseaudio#icon": {
+            "format": "{icon}",
+            "format-bluetooth": "{icon}",
+            "format-muted": "",
+            "format-icons": {
+                "headphone": "",
+                "hands-free": "",
+                "headset": "",
+                "phone": "",
+                "portable": "",
+                "car": "",
+                "default": ["", ""]
+            },
+            "scroll-step": 1,
+            "on-click": "pavucontrol",
+            "ignored-sinks": ["Easy Effects Sink"]
+        },
+        "pulseaudio": {
+            "format": "{volume}%",
+            "format-bluetooth": "{volume}%",
+            "scroll-step": 1,
+            "on-click": "pavucontrol",
+            "ignored-sinks": ["Easy Effects Sink"]
+        },
+        "hyprland/submap": {
+            "format": "",
+            "max-length": 8,
+            "tooltip": false
+        },
+        "tray": {
+            "icon-size": 21,
+            "spacing": 10
+        },
+        "clock#day": {
+            "format": "{:%d}",
+            "tooltip-format": "<tt><small>{calendar}</small></tt>",
+            "calendar": {
+                "mode"          : "month",
+                "mode-mon-col"  : 1,
+                "weeks-pos"     : "right",
+                "on-scroll"     : 1,
+                "format": {
+                    "months":     "<span color='#ffead3'><b>{}</b></span>",
+                    "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                    "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                    "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                    "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                }
+            },
+        },
+        "clock": {
+            "format": "{:%H\n%M}",
+        },
+        "clock#week-day": {
+            "format": "{:%a}",
+        },
+        "custom/separator": {
+            "format": "──",
+            "tooltip": false,
+        },
+        "custom/ram-icon": {
+            "tooltip": false,
+            "format": ""
+        },
+        "memory": {
+            "format": "{}%"
+        },
+        "custom/cpu-icon": {
+            "tooltip": false,
+            "format": ""
+        },
+        "cpu": {
+            "format": "{usage}%",
+            "interval": 1,
+        },
+        "custom/disk-root": {
+            "tooltip": false,
+            "format": ""
+        },
+        "disk": {
+            "interval": 30,
+            "format": "{percentage_free}%",
+            "path": "/"
+        },
+        "custom/disk-home": {
+            "tooltip": false,
+            "format": ""
+        },
+        "disk#home": {
+            "interval": 30,
+            "format": "{percentage_free}%",
+            "path": "/home"
+        },
 }
