--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $runner = bemenu.sh
 monitor=,preferred,auto,auto
 
 # autostart
-exec-once = /home/cie/.config/hypr/hyprstart
+exec-once = /home/codesyellow/.config/hypr/hyprstart
 
 # some default env vars.
 env = XCURSOR_SIZE,24
@@ -34,9 +34,7 @@ input {
 general {
     gaps_in = 0
     gaps_out = 0
-    border_size = 2
-    col.active_border = rgba(d3c6aaaa)
-    col.inactive_border = rgba(7a8478aa)
+    border_size = 0
 
     layout = master
 }
@@ -44,13 +42,13 @@ general {
 decoration {
     rounding = 0
     blur = yes
-    blur_size = 3
+    blur_size = 0
     blur_passes = 1
     blur_new_optimizations = on
     inactive_opacity = 0.5
 
-    drop_shadow = yes
-    shadow_range = 10
+    drop_shadow = no
+    shadow_range = 0
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
@@ -84,6 +82,8 @@ device:epic-mouse-v1 {
 
 # window rules
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
+windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
 windowrule = workspace 1, Code
@@ -115,18 +115,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-## scratchpad rules
-$edge-gpt  = ^(edge-gpt)$
-windowrule = float,$edge-gpt
-windowrule = workspace special silent,$edge-gpt
-windowrule = size 30% 90%,$edge-gpt
-windowrule = move 20 35,$edge-gpt
-
 $dropterm  = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
 windowrule = size 80% 20%,$dropterm
-windowrule = move 130 50,$dropterm
+
+$task  = ^(task-tui)$
+windowrule = float,$task
+windowrule = workspace special silent,$task
+windowrule = size 80% 80%,$task
 
 # one tap keychord
 ## layout keychord
@@ -158,16 +155,20 @@ submap=reset
 ## scratchpad keychord
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
-binde=,g,exec,hpr-scratcher toggle edge-gpt
+binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
-binde=,u,exec,hpr-scratcher toggle term
+binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
+binde=,t,exec,pypr toggle task
+bind=,t,submap,reset
 binde=,e,exec,~/.bin/easy_preset.sh LoudnessEqualizer
 bind=,e,submap,reset
 binde=,b,exec,~/.bin/easy_preset.sh HeavyBass
 bind=,b,submap,reset
 bind=,escape,submap,reset 
 submap=reset
+
+
 
 ## workspace keyshort
 bind=$mainMod,W,submap,workspace
