change task-tui size, added some new float rules and also a cliphist bind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ $runner = bemenu.sh
 monitor=,preferred,auto,auto
 
 # autostart
-exec-once = /home/codesyellow/.config/hypr/hyprstart
+exec-once = /home/cse/.config/hypr/hyprstart
 
 # some default env vars.
 env = XCURSOR_SIZE,24
@@ -82,6 +82,8 @@ device:epic-mouse-v1 {
 
 # window rules
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
+windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
 windowrulev2 = workspace 2,class:^(firefox)$
 windowrulev2 = move 100 100,title:^(calculator)$
@@ -99,6 +101,7 @@ bind = $sS, C, killactive
 bind = $sS, E, exit 
 bind = $mainMod, O, togglefloating
 bind = $mainMod, D, exec, $runner
+bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind = $mainMod, N, exec, grim
 
 ## Move focus with mainMod + arrow keys
@@ -123,7 +126,7 @@ windowrule = size 80% 20%,$dropterm
 $task  = ^(task-tui)$
 windowrule = float,$task
 windowrule = workspace special silent,$task
-windowrule = size 80% 80%,$task
+windowrule = size 40% 80%,$task
 
 # one tap keychord
 ## layout keychord
