--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,16 +3,22 @@ $sS = SUPERSHIFT
 $terminal = alacritty
 $runner = bemenu.sh
 
+
 monitor=,preferred,auto,auto
 
 # autostart
-exec-once = /home/cse/.config/hypr/hyprstart
+exec-once = /home/cie/.config/hypr/hyprstart
 
 # some default env vars.
-env = XCURSOR_SIZE,24
 env = MOZ_ENABLE_WAYLAND,1 
-env = QT_QPA_PLATFORM,"wayland"
-env = SDL_VIDEODRIVER,"wayland"
+env = QT_QPA_PLATFORM,wayland
+env = GDK_BACKEND,wayland,x11
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 # keyboard and mouse
 input {
@@ -41,15 +47,8 @@ general {
 
 decoration {
     rounding = 0
-    blur = yes
-    blur_size = 0
-    blur_passes = 1
-    blur_new_optimizations = on
     inactive_opacity = 0.5
 
-    drop_shadow = no
-    shadow_range = 0
-    shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
 
@@ -85,7 +84,14 @@ windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
 windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
+windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
+windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
+windowrulev2 = float,class:^(c_info)$
+windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
 windowrulev2 = workspace 2,class:^(firefox)$
+windowrulev2 = workspace 6,class:^(org.libretro.RetroArch)$
+windowrulev2 = workspace 6,class:^(pcsx2-qt)$
 windowrulev2 = move 100 100,title:^(calculator)$
 # workspace rules
 windowrule = workspace 1, Code
@@ -103,6 +109,7 @@ bind = $mainMod, O, togglefloating
 bind = $mainMod, D, exec, $runner
 bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind = $mainMod, N, exec, grim
+bind = $mainMod, G, exec, hypr_windows.sh
 
 ## Move focus with mainMod + arrow keys
 bind = $mainMod, J, layoutmsg,cyclenext
