--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
     "width": 40,
         "position": "right",
         "modules-left": ["wlr/workspaces"],
-        "modules-right": ["hyprland/submap", "custom/updates-icon", "custom/updates", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
+        "modules-right": ["hyprland/submap", "pulseaudio#icon", "pulseaudio", "custom/disk-root", "disk", "custom/disk-home", "disk#home", "custom/cpu-icon", "cpu","custom/ram-icon", "memory", "tray", "custom/separator", "clock", "clock#day", "clock#week-day"],
         "wlr/workspaces": {
             "active-only": false,
             "disable-scroll": true,
@@ -21,14 +21,6 @@
                 "default": ""
             },
             "on-click": "activate"
-        },
-        "custom/updates": {
-            "format": "{}",
-            "interval": 3600,
-            "exec": "~/.bin/updatecheck",
-            "return-type": "json",
-            "exec-if": "exit 0",
-            "signal": 8
         },
         "pulseaudio#icon": {
             "format": "{icon}",
