--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,238 +1,13 @@
-$mainMod = SUPER
-$sS = SUPERSHIFT
-$terminal = alacritty
-$runner = bemenu.sh
-
-
 monitor=,preferred,auto,auto
 
 # autostart
 exec-once = /home/cie/.config/hypr/hyprstart
+exec = hyprshade on blue-light-filter
 
 # some default env vars.
-env = MOZ_ENABLE_WAYLAND,1 
-env = QT_QPA_PLATFORM,wayland
-env = GDK_BACKEND,wayland,x11
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland
-env = CLUTTER_BACKEND,wayland
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-# keyboard and mouse
-input {
-    kb_layout = br,br
-    kb_variant = nodeadkeys,
-    kb_model =
-    kb_options = grp:ctrl_alt_toggle
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = no
-    }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-}
-
-general {
-    gaps_in = 0
-    gaps_out = 0
-    border_size = 0
-
-    layout = master
-}
-
-decoration {
-    rounding = 0
-    inactive_opacity = 0.5
-
-    col.shadow = rgba(1a1a1aee)
-}
-
-animations {
-    enabled = yes
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
-master {
-  new_is_master = true
-  no_gaps_when_only = true
-  orientation = top
-}
-
-binds {
-  allow_workspace_cycles = true
-}
-
-device:epic-mouse-v1 {
-  sensitivity = -0.5
-}
-
-# window rules
-windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
-windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
-windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
-windowrulev2 = float,class:^(org.kde.kdeconnect.app)$,title:^(KDE Connect)$
-windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^(fdm)$,title:^(Free Download Manager)$
-windowrulev2 = float,class:^(io.github.whoozle.android-file-transfer)$,title:^(Android File Transfer for Linux)$
-windowrulev2 = float,class:^(c_info)$
-windowrulev2 = float,title:^(Fazer login nas Contas do Google — Mozilla Firefox)$
-windowrulev2 = workspace 2,class:^(firefox)$
-windowrulev2 = workspace 6,class:^(org.libretro.RetroArch)$
-windowrulev2 = workspace 6,class:^(pcsx2-qt)$
-windowrulev2 = move 100 100,title:^(calculator)$
-# workspace rules
-windowrule = workspace 1, Code
-windowrule = workspace 2, Brave-browser
-windowrule = workspace 3, Alacritty
-#windowrule = workspace 4, qutebrowser
-windowrulev2 = workspace 6, class:^(heroic)$
-windowrulev2 = workspace 6, class:^(steam)$
-
-# binds
-bind = $mainMod, T, exec, $terminal
-bind = $sS, C, killactive 
-bind = $sS, E, exit 
-bind = $mainMod, O, togglefloating
-bind = $mainMod, D, exec, $runner
-bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
-bind = $mainMod, N, exec, grim
-bind = $mainMod, G, exec, hypr_windows.sh
-
-## Move focus with mainMod + arrow keys
-bind = $mainMod, J, layoutmsg,cyclenext
-bind = $mainMod, K, layoutmsg,cycleprev
-bind = $mainMod, C, layoutmsg,swapwithmaster
-bind = $sS, F, layoutmsg,focusmaster
-bind=SUPER,TAB,workspace,previous
-bind = $mainMod, U, layoutmsg,orientationtop
-
-## mouse binds
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-$dropterm  = ^(alacritty-dropterm)$
-windowrule = float,$dropterm
-windowrule = workspace special silent,$dropterm
-windowrule = size 80% 20%,$dropterm
-
-$task  = ^(task-tui)$
-windowrule = float,$task
-windowrule = workspace special silent,$task
-windowrule = size 40% 80%,$task
-
-# one tap keychord
-## layout keychord
-bind=$mainMod,L,submap,layout
-submap=layout
-binde=,j,layoutmsg,swapnext
-bind=,j,submap,reset
-binde=,k,layoutmsg,swapprev
-bind=,k,submap,reset
-binde=,f,layoutmsg,focusmaster
-bind=,f,submap,reset
-binde=,s,layoutmsg,swapwithmaster
-bind=,s,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-## fullscreen keychord
-bind=$mainMod,F,submap,fullscreen
-submap=fullscreen
-binde=,f,fullscreen,0
-bind=,f,submap,reset
-binde=,b,fullscreen,1
-bind=,b,submap,reset
-binde=,i,fakefullscreen
-bind=,i,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-## scratchpad keychord
-bind=$mainMod,S,submap,scratchpad
-submap=scratchpad
-binde=,g,exec,pypr toggle edge-gpt
-bind=,g,submap,reset
-binde=,u,exec,pypr toggle term
-bind=,u,submap,reset
-binde=,t,exec,pypr toggle task
-bind=,t,submap,reset
-binde=,e,exec,~/.bin/easy_preset.sh LoudnessEqualizer
-bind=,e,submap,reset
-binde=,b,exec,~/.bin/easy_preset.sh HeavyBass
-bind=,b,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-
-
-## workspace keyshort
-bind=$mainMod,W,submap,workspace
-submap=workspace
-binde=,c,workspace,1
-bind=,c,submap,reset
-binde=,b,workspace,2
-bind=,b,submap,reset
-binde=,t,workspace,3
-bind=,t,submap,reset
-binde=,m,workspace,4
-bind=,m,submap,reset
-binde=,e,workspace,5
-bind=,e,submap,reset
-binde=,g,workspace,6
-bind=,g,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-bind=$mainMod,M,submap,movetoworkspace
-submap=movetoworkspace
-binde=,c,movetoworkspace, 1
-bind=,c,submap,reset
-binde=,b,movetoworkspace, 2
-bind=,b,submap,reset
-binde=,t,movetoworkspace, 3
-bind=,t,submap,reset
-binde=,m,movetoworkspace, 4
-bind=,m,submap,reset
-binde=,e,movetoworkspace, 5
-bind=,e,submap,reset
-binde=,g,movetoworkspace, 6
-bind=,g,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-# loop keychords
-## resize keychord
-bind=$sS,R,submap,resize
-submap=resize
-binde=,L,resizeactive,10 0
-binde=,H,resizeactive,-10 0
-binde=,K,resizeactive,0 -10
-binde=,J,resizeactive,0 10
-bind=,escape,submap,reset 
-submap=reset
-
-## volume keychord
-bind=$mainMod,V,submap,volume
-submap=volume
-binde=,K,exec,~/.bin/volume.sh up
-binde=,J,exec,~/.bin/volume.sh down
-binde=,M,exec,~/.bin/volume.sh mute
-bind=,escape,submap,reset 
-submap=reset
-
-# keybinds further down will be global again...
+source = ~/.config/hypr/configs/variables.conf
+source = ~/.config/hypr/configs/env_variables.conf
+source = ~/.config/hypr/configs/input.conf
+source = ~/.config/hypr/configs/general.conf
+source = ~/.config/hypr/configs/rules.conf
+source = ~/.config/hypr/configs/binds.conf
