--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -7,10 +7,20 @@ bind = $mainMod, T, exec, $terminal
 bind = $sS, C, killactive 
 bind = $sS, E, exit 
 bind = $mainMod, O, togglefloating
-bind = $mainMod, D, exec, $runner
 bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind = $mainMod, N, exec, grim
 bind = $mainMod, G, exec, hypr_windows.sh
+
+bind=$mainMod,e,submap,exec
+submap=exec
+binde=,r,exec,$runner
+bind=,r,submap,reset
+binde=,b,exec,$browser
+bind=,b,submap,reset
+binde=,c,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
+bind=,c,submap,reset
+bind=,escape,submap,reset 
+submap=reset
 
 ## Move focus with mainMod + arrow keys
 bind = $mainMod, J, layoutmsg,cyclenext
@@ -79,9 +89,9 @@ binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
 binde=,i,exec,pypr toggle c-info
 bind=,i,submap,reset
-binde=,e,exec,~/.bin/easy_preset.sh LoudnessEqualizer
+binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
-binde=,b,exec,~/.bin/easy_preset.sh HeavyBass
+binde=,b,exec,flatpak run com.github.wwmm.easyeffects -l HeavyBass
 bind=,b,submap,reset
 bind=,escape,submap,reset 
 submap=reset
