add some scratchpads and binds

--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -5,11 +5,20 @@ binds {
 # binds
 bind = $mainMod, T, exec, $terminal
 bind = $sS, C, killactive 
-bind = $sS, E, exit 
-bind = $mainMod, O, togglefloating
 bind = $mainMod, H, exec, cliphist list | bemenu -l 10 | cliphist decode | wl-copy
 bind = $mainMod, N, exec, grim
 bind = $mainMod, G, exec, hypr_windows.sh
+
+bind=$mainMod,a,submap,action
+submap=action
+binde=,k,killactive
+bind=,k,submap,reset
+binde=,e,exit
+bind=,e,submap,reset
+binde=,f,togglefloating
+bind=,f,submap,reset
+bind=,escape,submap,reset 
+submap=reset
 
 bind=$mainMod,e,submap,exec
 submap=exec
@@ -17,8 +26,8 @@ binde=,r,exec,$runner
 bind=,r,submap,reset
 binde=,b,exec,$browser
 bind=,b,submap,reset
-binde=,c,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
-bind=,c,submap,reset
+binde=,h,exec,cliphist list | bemenu -l 10 | cliphist decode | wl-copy
+bind=,h,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
@@ -36,20 +45,20 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-$dropterm  = ^(alacritty-dropterm)$
+$dropterm = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
 windowrule = size 80% 20%,$dropterm
 
-$task  = ^(task-tui)$
+$todo = ^(neorg)$
+windowrule = float,$todo
+windowrule = workspace special silent,$todo
+windowrule = size 60% 40%,$todo
+
+$task = ^(task-tui)$
 windowrule = float,$task
 windowrule = workspace special silent,$task
 windowrule = size 40% 80%,$task
-
-$c-info  = ^(c-info)$
-windowrule = float,$c-info
-windowrule = workspace special silent,$c-info
-windowrule = size 40% 80%,$c-info
 
 # one tap keychord
 ## layout keychord
@@ -87,7 +96,7 @@ binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
 binde=,t,exec,pypr toggle task
 bind=,t,submap,reset
-binde=,i,exec,pypr toggle c-info
+binde=,i,exec,pypr toggle neorg
 bind=,i,submap,reset
 binde=,e,exec,flatpak run com.github.wwmm.easyeffects -l LoudnessEqualizer
 bind=,e,submap,reset
